--- a/Notas.html
+++ b/Notas.html
@@ -79,11 +79,11 @@
 
         <nav class="top-nav">
           <ul>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Home.html"> Inicio  </a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Informacion_General.html">Información</a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Notas.html"> Notas  </a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Ejercicios.html"> Ejercicios</a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Enlaces_externos.html"> Links </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Home.html"> Inicio  </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Informacion_General.html">Información</a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Notas.html"> Notas  </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios.html"> Ejercicios</a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Enlaces_externos.html"> Links </a> </li>
           </ul>
           </nav>
         <!-- 
@@ -102,8 +102,8 @@
 
       <!-- <h1 class="page-subtitle"></h1>  -->
       <div class="links-box"  style = "font-family: 'Oldenburg', cursive;">
-        <!-- <a href="https://pjhh-ciencias.github.io/CalculoTRES/Notas/S1.html">Semana 1</a> 
-        <a href="https://pjhh-ciencias.github.io/CalculoTRES/Semanas/S2.html">Semana 2</a> 
+        <!-- <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Notas/S1.html">Semana 1</a> 
+        <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Semanas/S2.html">Semana 2</a> 
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Semanas/S3.html">Semana 3</a> 
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Semanas/S4.html">Semana 4</a> 
         <a href="https://pjhh-ciencias.github.io/CPProgramacion/Semanas/S5.html">Semana 5</a> 
