--- a/Informacion_General.html
+++ b/Informacion_General.html
@@ -76,11 +76,11 @@
 
         <nav class="top-nav">
           <ul>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Home.html"> Inicio  </a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Informacion_General.html">Información</a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Notas.html"> Notas  </a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios.html"> Ejercicios</a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Enlaces_externos.html"> Links </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Home.html"> Inicio  </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Informacion_General.html">Información</a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Notas.html"> Notas  </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Ejercicios.html"> Ejercicios</a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Enlaces_externos.html"> Links </a> </li>
           </ul>
           </nav>
         <!-- 
@@ -118,7 +118,7 @@
           </p>
           <li><b>📚Tareas:</b> $20 \%$</li>
           <p>Previamente se publicará en la página del curso una lista de 
-            <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios.html"><b> Ejercicios propuestos</b></a>. 
+            <a href="https://pjhh-ciencias.github.io/CalculoTRES/Ejercicios.html"><b> Ejercicios propuestos</b></a>. 
             Los ejercicios de las tareas y <em>algunos</em> ejercios de los examenes <em>podrián</em> ser tomados de la correpondiente 
             lista de ejercicios propuestos, por lo que se recomienda encarecidamente realizarlos.
           </p>
