--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -76,11 +76,11 @@
 
         <nav class="top-nav">
           <ul>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Home.html"> Inicio  </a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Informacion_General.html">Información</a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Notas.html"> Notas  </a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Ejercicios.html"> Ejercicios</a> </li>
-            <li> <a href="https://pjhh-ciencias.github.io/CalculoTRES/Enlaces_externos.html"> Links </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Home.html"> Inicio  </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Informacion_General.html">Información</a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Notas.html"> Notas  </a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios.html"> Ejercicios</a> </li>
+            <li> <a href="https://pjhh-ciencias.github.io/AnalisisMatematico/Enlaces_externos.html"> Links </a> </li>
           </ul>
           </nav>
        
