--- a/Informacion_General.html
+++ b/Informacion_General.html
@@ -195,7 +195,7 @@
 <div class="info-box"><h1 class="title">Grupo de Classroom</h1>
 <p>
 Utilizaremos Classroom para publicar material sobre el curso: <a href="https://classroom.google.com/c/NjI2NzkyNjAxNDc3?cjc=i2zqagu"> 
-<b><FONT size="4" COLOR="navy"> Este es el vínculo de invitación a la clase</FONT></b></a>.
+<b>Este es el vínculo de invitación a la clase</b></a>.
 <!-- Entrar con el correo electronico proporcionado por la universidad (@aulavirtual.umar.mx). -->
 </p>
 </div>
