--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -216,7 +216,7 @@
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
-    <p>Considera el  $S=\{3,4,5,6,7,8,9,10\}$ con la relación de orden parcial $x\proceq y$
+    <p>Considera el  $S=\{3,4,5,6,7,8,9,10\}$ con la relación de orden parcial $x\preceq y$
       si y sólo si $x|y. Encuentra los elementos maximales y minimales.
     </p>
     </div>
@@ -236,14 +236,14 @@
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
       <p>Considera el conjunto $A=\{1,2,3,4\}$ con la relación de orden parcial $\le$ usual.
-        Dibujar el correspondiente diagrama de Hasse.</p>
+        Dibujar el correspondiente <a href="https://es.wikipedia.org/wiki/Diagrama_de_Hasse" target="_blank"> diagrama de Hasse</a>.</p>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
       <p>Sea $A=\{2,4,6,8,10,12\}$. 
         <ol>
           <li>Prueba que la relación $a\preceq b$ si y sólo si $a|b$ es un orden parcial sobre $A$. </li>
-          <li>Dibuja el <a href="https://es.wikipedia.org/wiki/Diagrama_de_Hasse" target="_blank"> diagrama de Hasse</a>
+          <li>Dibuja el diagrama de Hasse correspondiente.
              del conjunto parcialmente ordenado $(A,\preceq)$.</li>
         </ol>
         </p>
