--- a/Ejercicios.html
+++ b/Ejercicios.html
@@ -97,8 +97,8 @@
     <body class="fondo-body" > <h1 class="page-title"> Ejercicios propuestos</h1>  
 
     <div class="links-box" style = "font-family: 'Oldenburg', cursive;">
-      <!-- <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EP1.html"> Ejercicios propuestos primer examen parcial</a>
-      <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EP2.html"> Ejercicios propuestos segundo examen parcial</a>
+      <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EP1.html"> Ejercicios propuestos primer examen parcial</a>
+      <!-- <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EP2.html"> Ejercicios propuestos segundo examen parcial</a>
       <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EP3.html"> Ejercicios propuestos tercer examen parcial</a>
       <a  href="https://pjhh-ciencias.github.io/AnalisisMatematico/Ejercicios/EPO.html"> Ejercicios propuestos examen ordinario</a> -->
     </div>   
