--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -251,9 +251,18 @@
 
 <!--     
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>
+        Demuestra por inducción que si $X$ es infinito y $A$ es un subconjunto con $k$ elementos,
+        entonces $X\setminus A$ es infinito. Si $A$ tiene tantos elementos como naturales, 
+        ¿el resultado sigue siendo cierto?
+      </p>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>
+        Si $X$ es un conjunto finito, y $x$ es un conjunto arbitrario, entonces $X\cup \{x\}$ es 
+        también un conjunto finito
+      </p>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
