--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -253,25 +253,42 @@
         </p>
     </div>
 
-<!--     
+  
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
       <p>
-        Demuestra por inducción que si $X$ es infinito y $A$ es un subconjunto con $k$ elementos,
-        entonces $X\setminus A$ es infinito. Si $A$ tiene tantos elementos como naturales, 
-        ¿el resultado sigue siendo cierto?
+        Sea $B$ un conjunto numerable y $A$ es un subconjunto con $n$ elementos,prueba por inducción sobre $n$
+        que $X\setminus A$ es infinito. Si $A$ es numerable ¿el resultado sigue siendo cierto?
       </p>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
       <p>
-        Si $X$ es un conjunto finito, y $x$ es un conjunto arbitrario, entonces $X\cup \{x\}$ es 
-        también un conjunto finito
+        Prueba que si $A$ es un conjunto finito, y $\{ x\}$ es un conjunto unitario arbitrario, entonces $A\cup \{x\}$ es 
+        también un conjunto finito.
       </p>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>Para cada par de conjuntos siguientes, encuentra explicitamente una biyección entre ellos. Concluye 
+        los conjuntos son equivalentes.</p>
+      <ol class="two-column" >
+        <li>$\mathbb{N}$ y el conjunto de los números enteros positivos pares</li>
+        <li>$\mathbb{N}$ y el conjunto de los números enteros positivos impares</li>
+        <li>El conjunto de los números enteros positivos pares y el conjunto de los números enteros positivos pares</li>
+        <li>El intervalo $(0,1)$ y el intervalo $(1,5)$</li>
+        <li>El intervalo $(1,2)$ y el intervalo $(5,10)$</li>
+        <li>El intervalo $(0,1)$ y el intervalo $(a,b)$ donde $a,b \in \mathbb{R}$ con $a < b$</li>
+      </ol>
     </div>
 
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      Sea $I\subseteq \mathbb{R}$ un intervalo acotado. Prueba que $I \cap \mathbb{Z}$ es finito. 
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>Prueba que el conjunto de todos los pares ordenados $(a,b)$ donde $a,b \in \mathbb{Z}$ es numerable. </p>
+    </div>
+<!-- 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
     </div>
 
@@ -280,15 +297,6 @@
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
     </div>
+ -->
 
-    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
-    </div>
-
-    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
-    </div>
-
-
-
-    
-     -->
 </body>
