--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -288,8 +288,48 @@
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
       <p>Prueba que el conjunto de todos los pares ordenados $(a,b)$ donde $a,b \in \mathbb{Z}$ es numerable. </p>
     </div>
-<!-- 
+
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>Sea $n \in \mathbb{N}$. Prueba que  si  $A$ es un subconjunto propio de $[n]:=\{1,\ldots,n\}$,  
+      entonces $A$ no es quivalente a $[n]$.
+      $[n]$
+      </p>
+      <p>Concluye que un conjunto finito no puede ser equivalente a un subconjunto propio de este.</p>
+      <p><b>Sugerencia:</b> Proceda por contradicción. Suponga que existe $n_{0}$, especificamente 
+        elige a $n_{0}$ como el menor número natural tal que para $[n_{0}]$ existe $A\subsetneq [n_{0}]$
+        que es equivalente a $[n_{0}]$. Luego considera los casos $n_{0}\in A$ y $n_{0} \not \in A$ y 
+        contradice en ambos casos la minimalidad de $n_{0}$ </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      Sea $A$ un conjunto finito no vacio y $f\colon A \to A$ una función. Prueba que $f$ es 
+      inyectiva si y sólo si $f$ es sobreyectiva.
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>Sea $A$ un conjunto finito no vacio. Prueba que todo subconjunto de $A$ es finito.</p>
+      <p><b>Sugerencia:</b>
+      <ul>
+        <li>Prueba primero que dado $a \in A$ el conjunto $A - \{a\}$ es finito.$</li>
+        <li>Luego, utiliza inducción para probar el caso general. En el paso inductivo utiliza lo 
+          lo que probaste antes.  </li>
+      </ul> </p>
+
+    </div>
+
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>Prueba que $A \subseteq \mathbb{N}$ es acotado si y sólo si es finito. </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>Sean $A,B$ conjuntos finitos no vacios. Prueba que $A \times B$ es finito y 
+        $$|A\times B| = |A| \cdot |B|$$
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+      <p>Prueba que todo conjunto $A$ de números naturales tiene elemento máximo. </p>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
@@ -297,6 +337,5 @@
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
     </div>
- -->
 
 </body>
