--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -332,10 +332,10 @@
       <p>Prueba que todo conjunto $A$ de números naturales tiene elemento máximo. </p>
     </div>
 
-    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
+    <!-- <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
-    </div>
+    </div> -->
 
 </body>
