--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -329,7 +329,7 @@
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
-      <p>Prueba que todo conjunto $A$ de números naturales tiene elemento máximo. </p>
+      <p>Prueba que todo conjunto no vacio $A$ de números naturales tiene elemento máximo. </p>
     </div>
 
     <!-- <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
