--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -310,7 +310,7 @@
       <p>Sea $A$ un conjunto finito no vacio. Prueba que todo subconjunto de $A$ es finito.</p>
       <p><b>Sugerencia:</b>
       <ul>
-        <li>Prueba primero que dado $a \in A$ el conjunto $A - \{a\}$ es finito.$</li>
+        <li>Prueba primero que dado $a \in A$ el conjunto $A - \{a\}$ es finito.</li>
         <li>Luego, utiliza inducción para probar el caso general. En el paso inductivo utiliza lo 
           lo que probaste antes.  </li>
       </ul> </p>
