--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -162,7 +162,7 @@
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
       <p>En el conjunto $\mathbb{Z}$ de los números enteros considera la relación definida como: $x\preceq y$ si y sólo si $x=y^n$ para algún $n \in \mathbb{N}.$
         <ol>
-          <li>Prueba que $\preceq$ es una relación de orden parcial sobre $\mathbb{Z}$. </li>
+          <li>Prueba que $\preceq$ es una relación de orden parcial sobre $\mathbb{Z}$.</li><br>
           <li>Determina si $(\mathbb{Z},\preceq)$ es un conjunto totalmente ordenado.</li>
         </ol>
       </p>
@@ -173,7 +173,7 @@
         <ol>
           <li>En  el conjunto $\mathbb{N}$ de los números naturales. Prueba que la relación $a\preceq b$ si y sólo si $a|b$ es un orden parcial
             sobre $\mathbb{N}$. 
-          </li>
+          </li><br>
           <li>Determina si $(\mathbb{N}, \preceq)$ es un conjunto totalmente ordenado.</li>
         </ol>
         </p>
@@ -213,15 +213,15 @@
       <p>Sea el conjunto $A=\{3,4,5,6,7,8,9,10\}$ con la relación de orden parcial $x\preceq y$ si y sólo si 
         $x$ divide a $y$.
         <ol>
-        <li>Determina la existencia de elemento máximo y elemento mínimo en $A$.</li>
-        <li>Determina la existencia de elementos máximal y elementos mínimal en $A$.</li>
+        <li>Determina la existencia de elemento máximo y elemento mínimo en $A$.</li><br>
+        <li>Determina la existencia de elementos máximal y elementos mínimal en $A$.</li><br>
         <li>Determina las cotas superiores e inferiores de $B=\{6,9\}.$</li>
         </p>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
     <p>Considera el  $S=\{3,4,5,6,7,8,9,10\}$ con la relación de orden parcial $x\preceq y$
-      si y sólo si $x|y. Encuentra los elementos maximales y minimales.
+      si y sólo si $x|y$. Encuentra los elementos maximales y minimales.
     </p>
     </div>
 
@@ -231,7 +231,7 @@
         <ol>
           <li>
             Hallar los elementos maximales de $\mathcal{P}(U)-\{U\}.$
-          </li>
+          </li><br>
           <li>
             Hallar los elementos minimales de $\mathcal{P}(U)-\{\emptyset\}.$
           </li>
@@ -246,7 +246,7 @@
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
       <p>Sea $A=\{2,4,6,8,10,12\}$. 
         <ol>
-          <li>Prueba que la relación $a\preceq b$ si y sólo si $a|b$ es un orden parcial sobre $A$. </li>
+          <li>Prueba que la relación $a\preceq b$ si y sólo si $a|b$ es un orden parcial sobre $A$. </li><br>
           <li>Dibuja el diagrama de Hasse correspondiente.
              del conjunto parcialmente ordenado $(A,\preceq)$.</li>
         </ol>
@@ -256,7 +256,7 @@
   
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio </h1>
       <p>
-        Sea $B$ un conjunto numerable y $A$ es un subconjunto con $n$ elementos,prueba por inducción sobre $n$
+        Sea $B$ un conjunto numerable y $A$ es un subconjunto con $n$ elementos, prueba por inducción sobre $n$
         que $X\setminus A$ es infinito. Si $A$ es numerable ¿el resultado sigue siendo cierto?
       </p>
     </div>
@@ -272,11 +272,11 @@
       <p>Para cada par de conjuntos siguientes, encuentra explicitamente una biyección entre ellos. Concluye 
         los conjuntos son equivalentes.</p>
       <ol>
-        <li>$\mathbb{N}$ y el conjunto de los números enteros positivos pares</li>
-        <li>$\mathbb{N}$ y el conjunto de los números enteros positivos impares</li>
-        <li>El conjunto de los números enteros positivos pares y el conjunto de los números enteros positivos pares</li>
-        <li>El intervalo $(0,1)$ y el intervalo $(1,5)$</li>
-        <li>El intervalo $(1,2)$ y el intervalo $(5,10)$</li>
+        <li>$\mathbb{N}$ y el conjunto de los números enteros positivos pares</li><br>
+        <li>$\mathbb{N}$ y el conjunto de los números enteros positivos impares</li><br>
+        <li>El conjunto de los números enteros positivos pares y el conjunto de los números enteros positivos pares</li><br>
+        <li>El intervalo $(0,1)$ y el intervalo $(1,5)$</li><br>
+        <li>El intervalo $(1,2)$ y el intervalo $(5,10)$</li><br>
         <li>El intervalo $(0,1)$ y el intervalo $(a,b)$ donde $a,b \in \mathbb{R}$ con $a < b$</li>
       </ol>
     </div>
@@ -310,7 +310,7 @@
       <p>Sea $A$ un conjunto finito no vacio. Prueba que todo subconjunto de $A$ es finito.</p>
       <p><b>Sugerencia:</b>
       <ul>
-        <li>Prueba primero que dado $a \in A$ el conjunto $A - \{a\}$ es finito.</li>
+        <li>Prueba primero que dado $a \in A$ el conjunto $A - \{a\}$ es finito.</li><br>
         <li>Luego, utiliza inducción para probar el caso general. En el paso inductivo utiliza lo 
           lo que probaste antes.  </li>
       </ul> </p>
