--- a/Ejercicios/EP1.html
+++ b/Ejercicios/EP1.html
@@ -274,7 +274,7 @@
       <ol>
         <li>$\mathbb{N}$ y el conjunto de los números enteros positivos pares</li><br>
         <li>$\mathbb{N}$ y el conjunto de los números enteros positivos impares</li><br>
-        <li>El conjunto de los números enteros positivos pares y el conjunto de los números enteros positivos pares</li><br>
+        <li>El conjunto de los números enteros positivos pares y el conjunto de los números enteros positivos impares</li><br>
         <li>El intervalo $(0,1)$ y el intervalo $(1,5)$</li><br>
         <li>El intervalo $(1,2)$ y el intervalo $(5,10)$</li><br>
         <li>El intervalo $(0,1)$ y el intervalo $(a,b)$ donde $a,b \in \mathbb{R}$ con $a < b$</li>
