--- a/Ejercicios/EP2.html
+++ b/Ejercicios/EP2.html
@@ -150,7 +150,7 @@
 
     <div class="nota-box"><h1 class="number-title-ejercicio" id="Ejer:MetricasGeneradasPorFunciones"> Ejercicio</h1>
       <p>Sea $(A,d)$ un espacio métrico. Prueba que para cualesquiera $x,y,z,w \in A$, se satisface:
-        $$|d(x,y) - d(z,w)| \leq d(x,y) + d(z,w)$$ 
+        $$|d(x,y) - d(z,w)| \leq d(x,z) + d(y,w)$$ 
       </p>
       <p>En particular, 
         $$|d(x,z) - d(z,y)| \leq d(x,y)$$
