--- a/Ejercicios/EP2.html
+++ b/Ejercicios/EP2.html
@@ -125,7 +125,7 @@
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1>
       <p>Prueba que la función $d\colon \mathbb{R}^2 \times \mathbb{R}^2 \to \mathbb{R}$  definida como:
-        $$d((x_{1},y_{1}), (x_{2},y_{2})) \colon = 
+        $$d((x_{1},x_{2}), (y_{1},y_{2})) \colon = 
         \begin{cases} 
         |x_{1} - y_{1}|, \text{ si } x_{2}=y_{2}\\
         \\
