--- a/Ejercicios/EP2.html
+++ b/Ejercicios/EP2.html
@@ -518,7 +518,7 @@
           </li><br>
           <li>Muestra con un ejemplo que la contención
             \(\ell_1 \subseteq \ell_2\) es propia. 
-            <p><b>Sugerencia:</b> series \(p\).</p>  
+            <p><b>Sugerencia:</b> Piensa en series \(p\).</p>  
           </li>
         </ol>
 
