--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -625,6 +625,16 @@
       </p>
     </div>
 
+    <div class="definicion-box"><h1 class="number-title"> Definición </h1>
+      <h3> Espacio métrico completo y espacio de Banach </h3>
+      
+      <p>Un espacio métrico $(A,d)$ es <b>completo</b> si toda sucesión en $A$ que es de Cauchy en $A$
+        converge en $A$, i.e. si $(x_{n})$_{n=1}^{\infty}$ es una sucesión de Cauchy en $A$, entonces existe $a \in A$
+        tal que $\displaystyle{\lim_{n \to \infty} x_{n} = a}$ 
+      </p>
+
+    </div>
+
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
         
