--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -529,7 +529,7 @@
     </div>
 
 
-    <div class="definicion-box"><h1 class="number-title"> Definición </h1>
+    <div class="definicion-box"><h1 class="number-title-definicion"> Definición </h1>
       <h3> Límite inferior y superior de una sucesión acotada</h3>
       <p>
         Dada una sucesión acotada de números reales, \((x_n)_{n\in \mathbb{N}}\), 
@@ -625,12 +625,13 @@
       </p>
     </div>
 
-    <div class="definicion-box"><h1 class="number-title"> Definición </h1>
+    <div class="definicion-box"><h1 class="number-title-definicion"> Definición </h1>
       <h3> Espacio métrico completo y espacio de Banach </h3>
       
       <p>Un espacio métrico $(A,d)$ es <b>completo</b> si toda sucesión en $A$ que es de Cauchy en $A$
-        converge en $A$, i.e. si $(x_{n})$_{n=1}^{\infty}$ es una sucesión de Cauchy en $A$, entonces existe $a \in A$
-        tal que $\displaystyle{\lim_{n \to \infty} x_{n} = a}$ 
+        converge en $A$, i.e. si $(x_{n})_{n=1}^{\infty}$ es una sucesión de Cauchy en $A$, entonces existe $a \in A$
+        tal que $\displaystyle{\lim_{n \to \infty} x_{n} = a}$. Un espacio normado que es completo con la métrica inducida
+        por su norma se llama <b>espacio de Banach</b>
       </p>
 
     </div>
