--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -557,7 +557,7 @@
 
     </div>
 
-    <div class="definicion-box"><h2 class="number-title"> Definición </h2>
+    <div class="definicion-box"><h1 class="number-title-definicion"> Definición </h1>
       <p>
         Sea \((A,d)\) un espacio métrico. Una sucesión \((x_n)_{n\in \mathbb{N}}\) en
         \(A\), se dice que es una  <b>sucesión de Cauchy</b>
