--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -637,7 +637,7 @@
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
-      <p>
+      <p>Prueba que el espacio métrico $\mathbb{R}$ con la métrica usual $d(x,y) \colon= |x-y|$ es completo.
         
       </p>
     </div>
