--- a/Ejercicios/EP2.html
+++ b/Ejercicios/EP2.html
@@ -202,7 +202,7 @@
    
     </div>
 
-    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1>
+    <div class="nota-box"><h1 class="number-title-ejercicio" id="Ejer:MetProdCarte"> Ejercicio</h1>
       <p>
         Supongamos que \((A,d_{A})\), \((B,d_{B})\) son dos espacios métricos.
         Define
