--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -289,6 +289,14 @@
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>Sean \((A,d)\) un espacio métrico y \((x_n)_{n\in \mathbb{N}}, (y_n)_{n\in \mathbb{N}}\)
+        sucesiones  en \(A\) convergentes tales que el conjunto $\{ n \in \mathbb{N} \colon x_{n} \neq y_n\}$
+        es finito. Prueba que $\displaystyle{\lim_{n \to \infty} x_{n} = \lim_{n \to \infty} y_{n}}$
+        
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
         Sea \((V,\|\cdot\|)\) un espacio vectorial normado,
         \((v_n)_{n\in \mathbb{N}}\), \((w_n)_{n\in \mathbb{N}}\)
@@ -427,15 +435,15 @@
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
-        Supongamos que \((X,d_X)\), \((Y,d_Y)\) son dos espacios métrios.
-        En el <a href="./S2.html#Ejer:MetProdCarte"> Ejercicio 2.20</a>
+        Supongamos que \((A,d_A)\), \((B,d_B)\) son dos espacios métrios.
+        En el <a href="./EP2.html#Ejer:MetProdCarte"> Ejercicio 2.10</a>
         se definieron las métricas:
         \begin{eqnarray*}
-        d((x_1,y_1),(x_2,y_2))&=& d_X(x_1,x_2)+d_Y(y_1,y_2),\\
-        \rho((x_1,y_1),(x_2,y_2)) &=& \max\{d_X(x_1,x_2), d_Y(y_1,y_2)  \}\\
-        \sigma((x_1,y_1),(x_2,y_2)) &=& \sqrt{d_X(x_1,x_2)^2+d_Y(y_1,y_2)^2}.
+        d((x_1,y_1),(x_2,y_2))&=& d_A(x_1,x_2) + d_B(y_1,y_2),\\
+        \rho((x_1,y_1),(x_2,y_2)) &=& \max\{d_A(x_1,x_2), d_B(y_1,y_2)  \}\\
+        \sigma((x_1,y_1),(x_2,y_2)) &=& \sqrt{d_A(x_1,x_2)^2+d_B(y_1,y_2)^2}.
         \end{eqnarray*}
-        Prueba que \(d\), \(\rho\) y \(\sigma\) son métricas equivalentes.
+        Prueba que \(d\), \(\rho\) y \(\sigma\) son métricas equivalentes en $A \times B$.
       </p>
 
     </div>
@@ -540,7 +548,6 @@
       <p>
         <b>Observación:</b> De la definición se sigue directamente que \(\displaystyle{\liminf_{n\to \infty}x_n \leq \limsup_{n\to \infty}x_n}\).
       </p>
-
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
@@ -580,8 +587,8 @@
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
        <p>
           Sea \((A,d)\) un espacio métrico y
-          \((x_n)_{n\in \mathbb{N}}\) una sucesión convergente en \(X\).
-          Prueba que \((x_n)_{n\in \mathbb{N}}\) es Cauchy respecto a \(d\).
+          \((x_n)_{n\in \mathbb{N}}\) una sucesión convergente en \(A\).
+          Prueba que \((x_n)_{n\in \mathbb{N}}\) es de Cauchy respecto a \(d\).
         </p>
     </div>
 
