--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -438,11 +438,13 @@
         Supongamos que \((A,d_A)\), \((B,d_B)\) son dos espacios métrios.
         En el <a href="./EP2.html#Ejer:MetProdCarte"> Ejercicio 2.10</a>
         se definieron las métricas:
-        \begin{eqnarray*}
-        d((x_1,y_1),(x_2,y_2))&=& d_A(x_1,x_2) + d_B(y_1,y_2),\\
-        \rho((x_1,y_1),(x_2,y_2)) &=& \max\{d_A(x_1,x_2), d_B(y_1,y_2)  \}\\
-        \sigma((x_1,y_1),(x_2,y_2)) &=& \sqrt{d_A(x_1,x_2)^2+d_B(y_1,y_2)^2}.
-        \end{eqnarray*}
+        <ul>
+          <li>$d((x_1,y_1),(x_2,y_2)) = d_A(x_1,x_2) + d_B(y_1,y_2),$</li><br> 
+
+          <li>$\rho((x_1,y_1),(x_2,y_2)) =  \max\{d_A(x_1,x_2), d_B(y_1,y_2)  \}$</li><br>
+
+          <li>$\sigma((x_1,y_1),(x_2,y_2)) = \sqrt{d_A(x_1,x_2)^2+d_B(y_1,y_2)^2}.$</li><br>
+        </ul>
         Prueba que \(d\), \(\rho\) y \(\sigma\) son métricas equivalentes en $A \times B$.
       </p>
 
