--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -665,8 +665,334 @@
       </p>
     </div>
 
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+    <p>
+      Sea \((X,d)\) un espacio métrico. Prueba que todo
+      subconjunto finito de \(X\) es cerrado.
+    </p>
+    </div>
 
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d)\) un espacio métrico, \(F\subseteq X\) un
+        conjunto cerrado y \(U \subseteq  X\) un conjunto abierto.
+      </p>
+      <p>
+        Prueba que \(F\setminus U\) es cerrado y que
+        \(U \setminus F \) es abierto.
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        En el <a href="./S4.html#Ejer:MetEquivalentes"> Ejercicio 4.15</a>
+        se definió que dos
+        métricas son equivalentes si tienen las mismas
+        sucesiones convergentes.
+      </p>
+      <p>
+        Prueba que dos métricas son equivalentes si y sólo si generan los
+        mismos conjuntos abiertos.
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d)\) un espacio métrico.
+        <ol>
+          <li>
+            Sea \(\{F_i\}_{i\in I}\) una colección arbitraria de conjuntos
+            cerrados. Prueba que la intersección \(\cap_{i\in I}F_i\), es
+            cerrada.
+          </li>
+          <li>
+            Sea \(F_1,\dots, F_n\) una colección finita de conjuntos
+            cerrados. Prueba que la union \(\cup_{i=1}^n F_i\)
+            es cerrada.
+          </li>
+          <li>
+            Da un ejemplo de un espacio métrico y una colección numerable
+            de conjuntos cerrados, \(\{F_i\}_{i\in \mathbb{N}}\), tal que
+            su union \(\cup_{i\in \mathbb{N}} F_i\) no es cerrada.
+          </li>
+        </ol>
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Considera el espacio métrico \((\mathbb{R},|\cdot|)\).
+        <ol>
+          <li>
+            Prueba que  \(\mathbb{Q}\) no es ni abierto ni cerrado en
+            \(\mathbb{R}\).
+          </li>
+          <li>
+            ¿Existe un conjunto abierto en \(\mathbb{R}\), no vacío, contenido
+            en \(\mathbb{Q}\)?
+          </li>
+          <li>
+            Da un ejemplo de un subconjunto de \(\mathbb{R}\), cerrado
+            y que consiste sólo de números irracionales.
+          </li>
+        </ol>
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \(f:\mathbb{R}\to \mathbb{R}\) una función continua.
+      </p>
+      <p>
+      Fija \(a\in \mathbb{R}\). Prueba que el conjunto
+      \(\{t\in \mathbb{R}: f(t)>a\}\) es abierto y que
+      \(\{ t\in \mathbb{R}: f(t)=a\}\) es cerrado.
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        <ol>
+          <li> Prueba que todo intervalo abierto de \(\mathbb{R}\)
+           es la unión numerable de intervalos cerrados.
+          </li>
+          <li> Prueba que todo intervalo cerrado de \(\mathbb{R}\)
+            es la intersección numerable de intervalos abiertos.
+          </li>
+        </ol>
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d_X)\), \((Y,d_Y)\) dos espacios métricos y \(A \subseteq X\),
+        \(B\subseteq Y\). Cosdiera el espacio métrico \(X\times Y, d\)
+        con la métrica
+        \[
+        \sigma((x_1,y_1),(x_2,y_2))= \sqrt{d_X(x_1,x_2)^2+d_Y(y_1,y_2)^2}
+        \]
+        Ver <a href="./S2.html#Ejer:MetProdCarte">Ejercicio 2.10</a>.
+      </p>
+        <ol>
+          <li> Si \(A\) es abierto en \(X\) y \(B\) es abierto
+            en \(Y\) prueba que \(A\times B\) es abierto en \(X\times Y\).
+          </li>
+          <li> Si \(A\) es cerrado en \(X\) y \(B\) es cerrado
+            en \(Y\) prueba que \(A\times B\) es cerrado en \(X\times Y\).
+          </li>
+        </ol>
+        <p>
+          Nota: gracias al <a href="./S4.html#Ejer:MetEquivProdCarte">Ejercicio 4.17</a>
+          y <a href="#Ejer:TopologiaEspacioProducto">Ejercicio 5.10</a>,
+          éste ejercicio sigue siendo válidos si se reemplaza
+          \(\sigma\) por cualquier otra de las métricas del
+          <a href="./S2.html#Ejer:MetProdCarte">Ejercicio 2.20</a>.
+         </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Para  \(k\in \mathbb{N}\) denota \(e^{(k)}\) la sucesión de
+        números reales que es todo cero excepto en el lugar \(k\), donde
+        tiene un 1. Prueba que el conjunto
+        \(\{e^{(k)}\}_{k\in \mathbb{N}}\) es cerrado en
+        \((\ell_p, \|\cdot\|_p)\), para todo \(p\in [1,\infty]\).
+        </p>
+        <p>
+          Sugerencia: usa el <a href="#Teo:CaracCerrados">Teorema 5.11 </a>
+          inciso 3.
+        </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Prueba que \(x\in \overline{A}\) si y sólo si
+        existe una sucesión de elementos de \(A\),
+        \((a_n)_{n\in \mathbb{N}} \subset A\), tal que
+        \(\lim_na_n=x\).
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Prueba las siguientes indentidades.
+      </p>
+      <ol>
+        <li> \(\inte([a,b) )= (a,b)\), \(\cer([a,b))=[a,b]\). </li>
+        <li> \(\inte(\mathbb{Q})=\emptyset\), \(\cer(\mathbb{Q})=\mathbb{R}\) .</li>
+        <li> \(\inte(\Delta)=\emptyset\), \(\cer(\Delta)=\Delta\),
+          donde \(\Delta\) es el conjunto de cantor.</li>
+      </ol>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d)\) un espacio métrico y \(A,B \subseteq X\).
+      </p>
+      <ol>
+        <li>
+          Prueba \(\cer(A\cup B)=\cer(A)\cup \cer(B)\).
+        </li>
+        <li>
+          Prueba \(\cer(A \cap B)\subseteq \cer(A)\cap \cer(B) \)
+          y da un ejemplo que muestre que la contención puede ser propia.
+        </li>
+        <li>
+          Prueba \(\inte(A\cap B)= \inte(A)\cap \inte(B)\).
+        </li>
+        <li>
+          Prueba \(\inte(A)\cup \inte(B) \subseteq \inte(A\cup B) \) y
+          da un ejemplo que muestre que la contención puede ser propia.
+        </li>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d)\) un espacio métrico y \(A\subseteq X\).
+      </p>
+      <p>
+        Un punto \(x\in X\) se llama punto de acumulación de \(A\)
+        (o punto límite de \(A\)) si para todo \(r>0\) exite
+        \(a\in A\), \(a\ne x\) tal que \(d(x,a)< r\).
+      </p>
+      <p>
+        Si \(x\in X\) es un punto límite de \(A\) prueba que para todo 
+       abierto \(U\) tal que \(x\in U\) contiene una cantidad
+        infinita de elementos de \(A\).
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d)\) un espacio métrico, \(A\subseteq X\) y \(x\in X\).
+      </p>
+      <p>
+        Prueba que \(x\) es un punto límite de \(A\) si y  sólo si
+        existe una sucesión \((a_n)_{n\in \mathbb{N}} \subset A\)
+        tal que \(\lim_{n\to \infty}a_n=x\) y \(a_n\neq x\), para toda \(n\).
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d)\) un espacio métrico y \(A\subseteq X\). Por
+        \(A'\) denotamos al conjunto de todolos puntos de acumulación de
+        \(A\).
+      </p>
+      <ol>
+        <li>
+          Prueba que \(A'\) es un conjunto cerrado.
+        </li>
+        <li>
+          Prueba que \(\cer(A)=A\cup A'\).
+        </li>
+        <li>
+          Prueba que \(A\) es cerrado si y sólo si \(A'\subseteq A\).
+        </li>
+  
+      </ol>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d)\) un espacio métrico y \(A \subseteq X\). Un punto
+        \(x\in X\) se llama punto frontera de \(A\) si, para todo
+        \(r>0\) se cumple
+        \[
+        B_r(x)\cap A \ne \emptyset \quad  \textrm{y} \quad B_r(x)\cap A^c \ne \emptyset.
+        \]
+        Al conjunto de puntos frontera lo denotamos por \(\partial(A)\).
+      </p>
+      <p>
+        Prueba las siguientes identidades.
+        <ol>
+          <li> \(\partial(A)=\partial(A^c)\).</li>
+          <li> \(\cer(A)=\inte(A)\cup \partial(A)\).</li>
+          <li> \(X= \inte(A)\cup \partial(A)\cup \inte(A^c)\).</li>
+        </ol>
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Prueba que la bola cerrada es un subconjunto cerrado pero da
+         un ejemplo que muestra que la cerradura de la bola abierta no
+         es la bola cerrada, es decir:
+         \[
+         \overline{B_r(x_0)} \ne \{x\in X: d(x,x_0) \leq r\}
+         \]
+      </p>
+      <p>
+        Sugerencia: metrica discreta.
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((V,\|\cdot\|)\) un espacio vectorial normado,
+        \(v_0\in V\), \(r>0\).
+      </p>
+      <p>
+        Prueba
+        \[
+        \overline{B_r(v_0)}=\{ v\in V: \| v-v_0\| \leq r\}.
+        \]
+      </p>
+      <p>
+        Es decir, para espacios vectoriales normados
+        la cerradura de la bola abierta sí es la bola cerrada.
+      </p>
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+      <p>
+        Sea \((X,d)\) un espacio métrico y \(A\subseteq X\).
+        Prueba que \(\operatorname{diam}(A)=\operatorname{diam}(\overline{A})\).
+      </p>
       
+    </div>
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1>
+      <p>
+        Prueba que \(x\in \overline{A}\) si y sólo si \(d(x,A)=0\).
+      </p>
+    </div>
+
+
+
+    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1>
+      <p>
+        Sea \((X,d_X)\) un espacio métrico. Decimos que un subconjunto
+        \( D \subseteq X\) se llama denso  en \(X\) si \(\overline{D}=X\). Por
+        ejemplo \(\mathbb{Q}\) es denso en \(\mathbb{R}\).
+      </p>
+      <p>
+        Prueba que las siguientes condiciones son equivalentes.
+      </p>
+      <ol>
+        <li>
+          \(D\) es denso en \(X\).
+        </li>
+        <li>
+          Para todo \(x\in X\) existe una sucesión de elementos
+          de \(D\), \((d_n)_{n=1}^\infty \subseteq D\), tal que
+          \(\lim_{n\to \infty} d_n=x\).
+        </li>
+        <li>
+          Para todo \(x\in X\) y para toda \(r>0\),
+          \(B_r(x)\cap D \ne \emptyset \).
+        </li>
+        <li>
+          Para todo subconjunto abierto no vacío \(U \subseteq X\),
+          \(U\cap D \ne \emptyset\).
+        </li>
+        <li>
+          \(D^c\) tiene interior vacío.
+        </li>
+      </ol>
+    </div>
+
+
 
 
 </body>
