--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -425,7 +425,7 @@
       </ol>
       <p>
         Por ejemplo, el ejercicio 
-        <a href="#Ejer:EquiNormas-p">Ejercicio 3.6</a>
+        <a href="#Ejer:EquiNormas-p">Ejercicio 3.7</a>
         
         muestra que las normas \(\|\cdot\|_1, \|\cdot\|_2\),
         \(\|\cdot\|_\infty\) y en general todas las normas \(\|\cdot\|_p\)  en \(\mathbb{R}^n\)
@@ -436,7 +436,7 @@
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
         Supongamos que \((A,d_A)\), \((B,d_B)\) son dos espacios métrios.
-        En el <a href="./EP2.html#Ejer:MetProdCarte"> Ejercicio 2.10</a>
+        En el <a href="#Ejer:MetProdCarte"> Ejercicio</a>
         se definieron las métricas:
         <ul>
           <li>$d((x_1,y_1),(x_2,y_2)) = d_A(x_1,x_2) + d_B(y_1,y_2),$</li><br> 
@@ -667,19 +667,17 @@
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
     <p>
-      Sea \((X,d)\) un espacio métrico. Prueba que todo
-      subconjunto finito de \(X\) es cerrado.
+      Sea \((A,d)\) un espacio métrico. Prueba que todo
+      subconjunto finito de \(A\) es cerrado.
     </p>
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
-        Sea \((X,d)\) un espacio métrico, \(F\subseteq X\) un
-        conjunto cerrado y \(U \subseteq  X\) un conjunto abierto.
-      </p>
-      <p>
-        Prueba que \(F\setminus U\) es cerrado y que
-        \(U \setminus F \) es abierto.
+        Sea \((A,d)\) un espacio métrico, \(F\subseteq A\) un
+        conjunto cerrado en \((A,d)\) y \(U \subseteq  A\) un conjunto abierto \((A,d)\).
+        Prueba que \(F\setminus U\) es un conjunto  cerrado  y que
+        \(U \setminus F \) es un conjunto abierto en \((A,d)\).
       </p>
     </div>
 
@@ -771,7 +769,7 @@
         \[
         \sigma((x_1,y_1),(x_2,y_2))= \sqrt{d_X(x_1,x_2)^2+d_Y(y_1,y_2)^2}
         \]
-        Ver <a href="./S2.html#Ejer:MetProdCarte">Ejercicio 2.10</a>.
+        Ver <a href="#Ejer:MetProdCarte">Ejercicio 2.10</a>.
       </p>
         <ol>
           <li> Si \(A\) es abierto en \(X\) y \(B\) es abierto
@@ -786,7 +784,7 @@
           y <a href="#Ejer:TopologiaEspacioProducto">Ejercicio 5.10</a>,
           éste ejercicio sigue siendo válidos si se reemplaza
           \(\sigma\) por cualquier otra de las métricas del
-          <a href="./S2.html#Ejer:MetProdCarte">Ejercicio 2.20</a>.
+          <a href="#Ejer:MetProdCarte">Ejercicio 2.20</a>.
          </p>
     </div>
 
