--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -436,7 +436,7 @@
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
         Supongamos que \((A,d_A)\), \((B,d_B)\) son dos espacios métrios.
-        En el <a href="#Ejer:MetProdCarte"> Ejercicio</a>
+        En el <a href="./EP2.html#Ejer:MetProdCarte"> Ejercicio</a>
         se definieron las métricas:
         <ul>
           <li>$d((x_1,y_1),(x_2,y_2)) = d_A(x_1,x_2) + d_B(y_1,y_2),$</li><br> 
