--- a/Ejercicios/EP3.html
+++ b/Ejercicios/EP3.html
@@ -398,7 +398,7 @@
       </ol>
     </div>
 
-    <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
+    <div class="nota-box"><h1 class="number-title-ejercicio" id="MetEquivalentes"> Ejercicio</h1> 
       <p>
         Dos métricas, \(d_1\) y \(d_2\), sobre un
         conjunto \(A\), se llaman <b>equivalentes</b> si generan las mismas
@@ -436,7 +436,7 @@
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
         Supongamos que \((A,d_A)\), \((B,d_B)\) son dos espacios métrios.
-        En el <a href="./EP2.html#Ejer:MetProdCarte"> Ejercicio</a>
+        En el <a href="./EP2.html#Ejer:MetProdCarte"> Ejercicio 2.10</a>
         se definieron las métricas:
         <ul>
           <li>$d((x_1,y_1),(x_2,y_2)) = d_A(x_1,x_2) + d_B(y_1,y_2),$</li><br> 
@@ -683,7 +683,7 @@
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
-        En el <a href="./S4.html#Ejer:MetEquivalentes"> Ejercicio 4.15</a>
+        En el <a href="#MetEquivalentes"> Ejercicio 3.19</a>
         se definió que dos
         métricas son equivalentes si tienen las mismas
         sucesiones convergentes.
@@ -764,27 +764,27 @@
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
       <p>
         Sea \((X,d_X)\), \((Y,d_Y)\) dos espacios métricos y \(A \subseteq X\),
-        \(B\subseteq Y\). Cosdiera el espacio métrico \(X\times Y, d\)
+        \(B\subseteq Y\). Considera el espacio métrico \(X\times Y, d\)
         con la métrica
         \[
         \sigma((x_1,y_1),(x_2,y_2))= \sqrt{d_X(x_1,x_2)^2+d_Y(y_1,y_2)^2}
         \]
-        Ver <a href="#Ejer:MetProdCarte">Ejercicio 2.10</a>.
+        Ver <a href="./EP2.html#Ejer:MetProdCarte">Ejercicio 2.10</a>.
       </p>
         <ol>
           <li> Si \(A\) es abierto en \(X\) y \(B\) es abierto
             en \(Y\) prueba que \(A\times B\) es abierto en \(X\times Y\).
-          </li>
+          </li><br>
           <li> Si \(A\) es cerrado en \(X\) y \(B\) es cerrado
             en \(Y\) prueba que \(A\times B\) es cerrado en \(X\times Y\).
           </li>
         </ol>
         <p>
-          Nota: gracias al <a href="./S4.html#Ejer:MetEquivProdCarte">Ejercicio 4.17</a>
-          y <a href="#Ejer:TopologiaEspacioProducto">Ejercicio 5.10</a>,
+          Nota: gracias al <a href="./S4.html#Ejer:MetEquivProdCarte">Ejercicio</a>
+          y <a href="#Ejer:TopologiaEspacioProducto">Ejercicio</a>,
           éste ejercicio sigue siendo válidos si se reemplaza
           \(\sigma\) por cualquier otra de las métricas del
-          <a href="#Ejer:MetProdCarte">Ejercicio 2.20</a>.
+          <a href="#Ejer:MetProdCarte">Ejercicio</a>.
          </p>
     </div>
 
@@ -796,10 +796,10 @@
         \(\{e^{(k)}\}_{k\in \mathbb{N}}\) es cerrado en
         \((\ell_p, \|\cdot\|_p)\), para todo \(p\in [1,\infty]\).
         </p>
-        <p>
+        <!-- <p>
           Sugerencia: usa el <a href="#Teo:CaracCerrados">Teorema 5.11 </a>
           inciso 3.
-        </p>
+        </p> -->
     </div>
 
     <div class="nota-box"><h1 class="number-title-ejercicio"> Ejercicio</h1> 
